# frisbeegolf-rounds

./: .gitignore  README.md  db.sqlite3  package-lock.json  package.json  pyproject.toml  requirements.txt
apps/courses/: admin.py  models.py  serializers.py  urls.py  views.py
apps/courses/migrations/: 0001_initial.py  0002_hole_hole_no.py
apps/golf_rounds/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/golf_rounds/migrations/: 0001_initial.py  0002_alter_golfround_hole_results.py  0003_golfround_owner.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
backend/: settings.py  urls.py
public/: index.html
src/: App.js  index.js
src/components/: Courses.js  DeleteRoundToastContent.js  DisplayRounds.js  FinishHole.js  FinishRoundDialog.js  Header.js  Homepage.js  Login.js  Navbar.js  NewRoundForm.js  NotFound.js  Register.js  RequireAuthDialog.js  RoundDetails.js  RoundMenu.js
src/pages/: CoursesPage.js  Homepage.js  NewRoundPage.js  OngoingRoundPage.js  RoundOverviewPage.js  StatisticsPage.js
src/utils/: IsAuthenticated.js  RequireAuth.js  Utils.js  axiosHandler.js
